--- a/degreezle/src/app/app.component.html
+++ b/degreezle/src/app/app.component.html
@@ -1,18 +1,8 @@
-<div class="game">
 
-    <div class="film">
-      <img src="/assets/movie1.jpg">
-    </div>
-    <div class="dots">
-      <img src="/assets/dots.svg">
-    </div>
-    <div class="film" [class.typing]="typing" (click)="typing=true">
-      <input>
-    </div>
-    <div class="dots">
-      <img src="/assets/dots.svg">
-    </div>
-    <div class="film">
-      <img src="/assets/movie2.jpg">
-    </div>
-</div>
+
+
+<mat-tab-group mat-align-tabs="center">
+  <mat-tab label="First"><app-experiment1></app-experiment1></mat-tab>
+  <mat-tab label="Second">Content 2</mat-tab>
+  <mat-tab label="Third">Content 3</mat-tab>
+</mat-tab-group>
