--- a/degreezle/src/app/app.component.scss
+++ b/degreezle/src/app/app.component.scss
@@ -1,44 +1,3 @@
-.game {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 500px;
-  background-color: #f1f1f1;
-  gap: 20px;
-}
-
-.film {
-  width: 140px;
-  height: 200px;
-  border-radius: 5px;
-  border: rgb(175, 172, 172) 1px solid;
-  background-color: rgb(218, 216, 216);
-  box-shadow: 0 1px 3px rgb(0 0 0 / 35%);
-  font-size: 25px;
-
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-
-  img {
-    min-width: 100%;
-    min-height: 100%;
-  }
-
-  &.typing {
-    width: 340px;
-  }
-
-  input {
-    border: none;
-    background: transparent;
-    font-size: large;
-  }
-
-  input:focus {
-    outline: none;
-  }
+.mat-tab-group {
+  margin-bottom: 48px;
 }
