--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 
 <mat-tab-group mat-align-tabs="center">
   <mat-tab label="First"><app-experiment1></app-experiment1></mat-tab>
-  <mat-tab label="Second">Content 2 okay</mat-tab>
+  <mat-tab label="Second">Content 2 test</mat-tab>
   <mat-tab label="Third">Content 3</mat-tab>
 </mat-tab-group>
