--- a/src/app/experiment1/experiment1.component.html
+++ b/src/app/experiment1/experiment1.component.html
@@ -6,14 +6,26 @@
   <div class="dots">
     <img src="/assets/dots.svg">
   </div>
-  <div [class.cast]="chosen">
-    <app-selector (chosen)="chosen=true;" [options]="castMembers"></app-selector>
+  <div class="cast">
+    <img src="/assets/cast2.jpg">
+  </div>
+  <div class="dots">
+    <img src="/assets/dots.svg">
+  </div>
+  <div class="film poster">
+    <img src="/assets/movie3.jpg">
+  </div>
+  <div class="dots">
+    <img src="/assets/dots.svg">
+  </div>
+  <div  [class.cast]="chosen">
+    <app-cast-member-selector (chosen)="chosen=true;"  [options]="castMembers"></app-cast-member-selector>
   </div>
   <div *ngIf="chosen" class="dots">
     <img src="/assets/dots.svg">
   </div>
   <div *ngIf="chosen" class="film">
-    <app-selector [options]="movies"></app-selector>
+    <app-movie-selector [options]="movies"></app-movie-selector>
   </div>
   <div class="dots">
     <img src="/assets/dots.svg">
