--- a/src/app/experiment1/experiment1.component.scss
+++ b/src/app/experiment1/experiment1.component.scss
@@ -5,11 +5,12 @@
 }
 
 .game {
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 500px;
   background-color: #f1f1f1;
   gap: 20px;
 }
@@ -20,7 +21,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 1000px;
     background-color: #f1f1f1;
     gap: 20px;
     flex-direction: column;
