--- a/src/app/experiment2/experiment2.component.html
+++ b/src/app/experiment2/experiment2.component.html
@@ -1,1 +1,38 @@
-<p>experiment2 works!</p>
+<div class="game">
+
+  <div class="film poster">
+    <img src="/assets/movie1.jpg">
+  </div>
+  <div class="dots">
+    <img src="/assets/dots.svg">
+  </div>
+  <div class="cast">
+    <img src="/assets/cast2.jpg">
+  </div>
+  <div class="dots">
+    <img src="/assets/dots.svg">
+  </div>
+  <div class="film poster">
+    <img src="/assets/movie3.jpg">
+  </div>
+  <div class="dots">
+    <img src="/assets/dots.svg">
+  </div>
+  <div>
+    <swiper [effect]="'cards'" [grabCursor]="true" class="mySwiper">
+      <ng-template swiperSlide *ngFor="let member of castMembers"><img src="https://image.tmdb.org/t/p/w500{{member.img_path}}"><div class="cast-name">{{member.name}}</div></ng-template>
+    </swiper>
+  </div>
+  <div *ngIf="chosen" class="dots">
+    <img src="/assets/dots.svg">
+  </div>
+  <div *ngIf="chosen" class="film">
+    <app-movie-selector [options]="movies"></app-movie-selector>
+  </div>
+  <div class="dots">
+    <img src="/assets/dots.svg">
+  </div>
+  <div class="film poster">
+    <img src="/assets/movie2.jpg">
+  </div>
+</div>
