--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,39 @@
+
+@import "~swiper/css";
+@import "~swiper/css/effect-cards";
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+/* Swiper */
+
+
+
+.swiper {
+  width: 140px;
+  height: 140px;
+  padding: 20px;
+
+  img {
+    width: 140px;
+  }
+
+  .cast-name {
+    position: fixed;
+    margin: 140px;
+  }
+}
+
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
+}
