--- a/src/app/experiment4/experiment4.component.html
+++ b/src/app/experiment4/experiment4.component.html
@@ -19,9 +19,7 @@
     <img src="/assets/dots.svg">
   </div>
   <div>
-    <swiper [effect]="'cards'" [grabCursor]="true" class="cards">
-      <ng-template swiperSlide class="cards" *ngFor="let member of castMembers"><img src="https://image.tmdb.org/t/p/w500{{member.img_path}}"><div class="cast-name">{{member.name}}</div></ng-template>
-    </swiper>
+    ?
   </div>
   <div *ngIf="chosen" class="dots">
     <img src="/assets/dots.svg">
@@ -35,4 +33,9 @@
   <div class="film poster">
     <img src="/assets/movie2.jpg">
   </div>
+</div>
+
+<div class="list">
+  <div class="item" *ngFor="let member of castMembers"><img src="https://image.tmdb.org/t/p/w500{{member.img_path}}"><div class="cast-name">{{member.name}}</div></div>
+
 </div>
