--- a/src/app/experiment3/experiment3.component.html
+++ b/src/app/experiment3/experiment3.component.html
@@ -19,8 +19,12 @@
     <img src="/assets/dots.svg">
   </div>
   <div>
-    <swiper [effect]="'cards'" [grabCursor]="true" class="cards">
-      <ng-template swiperSlide class="cards" *ngFor="let member of castMembers"><img src="https://image.tmdb.org/t/p/w500{{member.img_path}}"><div class="cast-name">{{member.name}}</div></ng-template>
+    <swiper [effect]="'cards'" [grabCursor]="true" class="cards" (slideChange)="onSlideChange()" (click)="tapped()">
+      <ng-template swiperSlide class="cards" *ngFor="let member of castMembers">
+        <img [class.tapped]="taps" src="https://image.tmdb.org/t/p/w500{{member.img_path}}">
+        <div class="cast-name">{{member.name}}</div>
+        <div *ngIf="taps" class="confirm" (click)="confirm()">✓</div>
+      </ng-template>
     </swiper>
   </div>
   <div *ngIf="chosen" class="dots">
