--- a/src/app/experiment3/experiment3.component.scss
+++ b/src/app/experiment3/experiment3.component.scss
@@ -95,6 +95,25 @@
     width: 140px;
   }
 
+  .tapped {
+      /* Add the blur effect */
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+  }
+
+  .confirm {
+    position: fixed;
+    border-radius: 100%;
+    background-color: rgb(76, 180, 76);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.35);
+    border: rgb(175, 172, 172) 1px solid;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .cast-name {
     position: fixed;
     margin-top: 250px;
