Included puzzle service and loader to main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
 
 
 
-<mat-tab-group mat-align-tabs="center">
-  <mat-tab label="First"><app-experiment1></app-experiment1></mat-tab>
-  <mat-tab label="Second"><app-experiment2></app-experiment2></mat-tab>
-  <mat-tab label="Third"><app-experiment3></app-experiment3></mat-tab>
-  <mat-tab label="Fourth"><app-experiment4></app-experiment4></mat-tab>
-</mat-tab-group>
+<app-puzzle></app-puzzle>
