--- a/src/app/movie-selector/movie-selector.component.scss
+++ b/src/app/movie-selector/movie-selector.component.scss
@@ -5,3 +5,33 @@
   width: 100%;
   height: 100%;
 }
+
+
+
+.film {
+  width: 140px;
+  height: 200px;
+  border-radius: 5px;
+  border: rgb(175, 172, 172) 1px solid;
+  background-color: rgb(218, 216, 216);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 35%);
+  font-size: 25px;
+
+  &.poster {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  img {
+    min-width: 100%;
+    min-height: 100%;
+  }
+
+  &.typing {
+    width: 340px;
+  }
+
+
+}
