Solved solution link

--- a/src/app/cast-member-selector/cast-member-selector.component.html
+++ b/src/app/cast-member-selector/cast-member-selector.component.html
@@ -18,10 +18,8 @@
       </mat-autocomplete>
     </mat-form-field>
   </form>
-  <img  *ngIf="!typing && !hasChosen()" src="/assets/question-actor.svg" width="40px">
   
 </div>
+<div (click)="typing=true" class="who" *ngIf="!typing && !hasChosen()">????</div>
 
-<div *ngIf="hasChosen()" class="cast">
-  <img   src="https://image.tmdb.org/t/p/w500{{myControl.value.profile_path}}" width="150px">
-</div>
+<app-cast-member-display *ngIf="hasChosen()" [item]="myControl.value"></app-cast-member-display>
