--- a/src/app/cast-member-display/cast-member-display.component.scss
+++ b/src/app/cast-member-display/cast-member-display.component.scss
@@ -1,8 +1,8 @@
 
 .cast {
     width: 140px;
-    height: 140px;
-    border-radius: 100%;
+    height: 200px;
+    border-radius: 5px;
     border: rgb(175, 172, 172) 1px solid;
     background-color: rgb(218, 216, 216);
     box-shadow: 0 1px 3px rgb(0 0 0 / 35%);
