--- a/src/app/movie-selector/movie-selector.component.scss
+++ b/src/app/movie-selector/movie-selector.component.scss
@@ -1,11 +1,21 @@
-.who {
+.option {
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
+  align-content: center;
+  gap: 10px;
 }
 
 .form {
   padding: 0px 15px;
+}
+
+.movie-pic {
+  width: 24px;
+  padding-top: 15px;
+}
+
+.movie-name  {
+  font-size: 16px;
 }
