--- a/src/app/puzzle/puzzle.component.html
+++ b/src/app/puzzle/puzzle.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="!token" class="game">
+<div *ngIf="!token" class="game" #scroll>
     <app-movie-display [item]="puzzle?.start_movie"></app-movie-display>
     <div *ngFor="let id of puzzleSequence; let i = index"> 
         <app-cast-member-selector *ngIf="showMovieSelector(i)" [movieId]="id" (chosen)="add($event)"></app-cast-member-selector>
@@ -7,6 +7,7 @@
     </div>
     <div *ngIf="solved">Yay! Share your or view your solution: <a *ngIf="solvedSolution?.token" href="https://degreezle-test.firebaseapp.com/solution/{{solvedSolution?.token}}">{{solvedSolution?.token}}</a></div>
     <app-movie-display [item]="puzzle?.end_movie"></app-movie-display>
+    <div #bottom>yo</div>
 </div>
 <div *ngIf="token" class="game">
     <div *ngFor="let item of loadedSolution; let i = index">
