--- a/src/app/puzzle/puzzle.component.scss
+++ b/src/app/puzzle/puzzle.component.scss
@@ -1,10 +1,10 @@
 .game {
-    padding-top: 50px;
-    padding-bottom: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 100%;
+    overflow: auto;
     background-color: #f1f1f1;
     gap: 5px;
 }
@@ -15,6 +15,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
+        height: 100%;
         background-color: #f1f1f1;
         gap: 5px;
         flex-direction: column;
