--- a/src/app/movie-selector/movie-selector.component.html
+++ b/src/app/movie-selector/movie-selector.component.html
@@ -3,6 +3,7 @@
     <mat-form-field class="input-full-width" >
       <mat-label>Pick a film <mat-icon>movie</mat-icon></mat-label>
       <input type="text"
+             #input
              placeholder="Start typing"
              aria-label="Number"
              matInput
