--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,8 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
 .mat-form-field-label-wrapper .mat-icon {
   vertical-align: middle !important;
 }
+
+.modal-backdrop {
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+} 
