--- a/src/app/instructions-modal/instructions-modal.component.scss
+++ b/src/app/instructions-modal/instructions-modal.component.scss
@@ -2,3 +2,18 @@
    width: 250px;
    display: block;
 }
+
+h2 {
+  font-size: 24px;
+  line-height: normal;
+  font-weight: 700;
+  // font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 10px 10px 24px;
+}
+
+p {
+  font-size: 22px;
+  line-height: normal;
+  // font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 0 10px 50px;
+}
