--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,9 @@ body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
 } 
+
+.mat-dialog-container {
+  border-radius: 16px;
+  background-color:rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px);
+}
