--- a/src/app/puzzle/puzzle.component.html
+++ b/src/app/puzzle/puzzle.component.html
@@ -5,7 +5,7 @@
         <app-cast-member-selector *ngIf="showMovieSelector(i)" [movieId]="id" (chosen)="add($event)"></app-cast-member-selector>
         <app-movie-selector *ngIf="showCastMemberSelector(i)" [castMemberId]="id" (chosen)="add($event)"></app-movie-selector>
     </div>
-    <div *ngIf="solved">Yay! Share your or view your solution: <a *ngIf="solvedSolution?.token" href="https://degreezle-test.firebaseapp.com/solution/{{solvedSolution?.token}}">{{solvedSolution?.token}}</a></div>
+    <!-- <div *ngIf="solved">Yay! Share your or view your solution: <a *ngIf="solvedSolution?.token" href="https://degreezle-test.firebaseapp.com/solution/{{solvedSolution?.token}}">{{solvedSolution?.token}}</a></div> -->
     <app-movie-display [item]="puzzle?.end_movie"></app-movie-display>
 </div>
 <div *ngIf="token" class="game">
