Top bar with info icon

--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -1,1 +1,8 @@
+
+<mat-toolbar>
+  <span class="bar-spacer"></span>
+  <button mat-icon-button aria-label="Show instructions" (click)="showInstructions()">
+    <mat-icon>info</mat-icon>
+  </button>
+</mat-toolbar>
 <app-puzzle [token]="token"></app-puzzle>
