Allow puzzle lookup by id

--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -5,4 +5,4 @@
     <mat-icon>info</mat-icon>
   </button>
 </mat-toolbar>
-<app-puzzle [token]="token"></app-puzzle>
+<app-puzzle [token]="token" [puzzleId]="puzzleId"></app-puzzle>
