--- a/src/app/instructions-modal/instructions-modal.component.scss
+++ b/src/app/instructions-modal/instructions-modal.component.scss
@@ -1,6 +1,9 @@
 .example-solution{
-   width: 250px;
-   display: block;
+  font-size: 16px;
+  img {
+    width: 400px;
+    display: block;
+  }
 }
 
 h2 {
@@ -15,5 +18,5 @@ p {
   font-size: 22px;
   line-height: normal;
   // font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  margin: 0 10px 50px;
+  margin: 0px 10px 20px 10px;
 }
