--- a/src/app/movie-display/movie-display.component.scss
+++ b/src/app/movie-display/movie-display.component.scss
@@ -5,15 +5,13 @@
     border-radius: 5px;
     border: rgb(175, 172, 172) 1px solid;
     background-color: rgb(218, 216, 216);
-    box-shadow: 0 1px 3px rgb(0 0 0 / 35%);
+    // box-shadow: 0 1px 3px rgb(0 0 0 / 35%);
     font-size: 25px;
-  
-    &.poster {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    
   
     img {
       min-width: 100%;
