--- a/src/app/puzzle-page/puzzle-page.component.html
+++ b/src/app/puzzle-page/puzzle-page.component.html
@@ -1,8 +1,12 @@
 
-<mat-toolbar>
+<mat-toolbar class="nav-bar">
   <span class="bar-spacer"></span>
   <button mat-icon-button aria-label="Show instructions" (click)="showInstructions()">
     <mat-icon>info</mat-icon>
   </button>
 </mat-toolbar>
-<app-puzzle [token]="token" [puzzleId]="puzzleId"></app-puzzle>
+<div class="center-puzzle">
+  <div class="bar-spacer"></div>
+  <app-puzzle [token]="token" [puzzleId]="puzzleId"></app-puzzle>
+  <div class="bar-spacer"></div>
+</div>
