--- a/src/app/puzzle-page/puzzle-page.component.scss
+++ b/src/app/puzzle-page/puzzle-page.component.scss
@@ -1,3 +1,19 @@
 .bar-spacer {
     flex: 1 1 auto;
-  }
+}
+
+.nav-bar {
+    position: fixed;
+}
+
+.center-puzzle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    min-height: 100%;
+    min-width: 100%;
+    width: fit-content;
+    height: fit-content;
+    background-color: #f0f0f0;
+}
