--- a/src/app/puzzle/puzzle.component.scss
+++ b/src/app/puzzle/puzzle.component.scss
@@ -1,24 +1,22 @@
 .game {
+    margin-top: 64px;
+    margin-left: 20px;
+    margin-right: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: #f1f1f1;
     gap: 5px;
+    border: black 1px solid;
 }
 
 @media only screen and (max-width: 600px) {
     .game {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-        background-color: #f1f1f1;
-        gap: 5px;
         flex-direction: column;
     }
 
+}
+
+.game-wrapper {
+    display: inline-block;
+    overflow: auto;
 }
