--- a/src/app/puzzle/puzzle.component.scss
+++ b/src/app/puzzle/puzzle.component.scss
@@ -6,12 +6,13 @@
     align-items: center;
     justify-content: center;
     gap: 5px;
-    border: black 1px solid;
 }
 
 @media only screen and (max-width: 600px) {
     .game {
         flex-direction: column;
+        margin-left: 0px;
+        margin-right: 0px;
     }
 
 }
