Smoothly scroll to the end

--- a/src/app/puzzle/puzzle.component.html
+++ b/src/app/puzzle/puzzle.component.html
@@ -1,6 +1,6 @@
 
 <div class="game-wrapper">
-    <div *ngIf="!token" class="game" #scroll>
+    <div *ngIf="!token" class="game">
         <app-movie-display [item]="puzzle?.start_movie"></app-movie-display>
         <div *ngFor="let id of puzzleSequence; let i = index"> 
             <app-cast-member-selector *ngIf="showMovieSelector(i)" [movieId]="id" (chosen)="add($event)"></app-cast-member-selector>
@@ -8,6 +8,7 @@
         </div>
         <!-- <div *ngIf="solved">Yay! Share your or view your solution: <a *ngIf="solvedSolution?.token" href="https://degreezle-test.firebaseapp.com/solution/{{solvedSolution?.token}}">{{solvedSolution?.token}}</a></div> -->
         <app-movie-display [item]="puzzle?.end_movie"></app-movie-display>
+        <div #afterEndMovie></div>
     </div>
     <div *ngIf="token" class="game">
         <div *ngFor="let item of loadedSolution; let i = index">
@@ -15,4 +16,5 @@
             <app-cast-member-display *ngIf="i % 2 !== 0" [item]="item"></app-cast-member-display>
         </div>
     </div>
+    
 </div>
