Added images for unknown pic cases

--- a/src/app/cast-member-display/cast-member-display.component.html
+++ b/src/app/cast-member-display/cast-member-display.component.html
@@ -1,3 +1,4 @@
-<div *ngIf="item" class="cast">
-    <img src="https://image.tmdb.org/t/p/w500{{item.profile_path}}" width="150px">
+<div *ngIf="item" class="cast" title="{{item.name}}">
+    <img *ngIf="item.profile_path" src="https://image.tmdb.org/t/p/w500{{item.profile_path}}" width="150px">
+    <img *ngIf="!item.profile_path" src="assets/unknown-person.svg" width="150px">
 </div>
