--- a/src/app/puzzle/puzzle.component.html
+++ b/src/app/puzzle/puzzle.component.html
@@ -1,6 +1,8 @@
 
 <div class="game-wrapper">
-    <div *ngIf="!token" class="game">
+    <div *ngIf="loading"><img src="assets/loading.gif"></div>
+    <div *ngIf="!loading && !token" class="game">
+        
         <app-movie-display [item]="puzzle?.start_movie"></app-movie-display>
         <div *ngFor="let id of puzzleSequence; let i = index"> 
             <app-cast-member-selector *ngIf="showMovieSelector(i)" [movieId]="id" (chosen)="add($event)"></app-cast-member-selector>
@@ -10,7 +12,7 @@
         <app-movie-display [item]="puzzle?.end_movie"></app-movie-display>
         <div #afterEndMovie></div>
     </div>
-    <div *ngIf="token" class="game">
+    <div *ngIf="!loading && token" class="game">
         <div *ngFor="let item of loadedSolution; let i = index">
             <app-movie-display *ngIf="i % 2 === 0" [item]="item"></app-movie-display>
             <app-cast-member-display *ngIf="i % 2 !== 0" [item]="item"></app-cast-member-display>
