--- a/src/app/instructions-modal/instructions-modal.component.html
+++ b/src/app/instructions-modal/instructions-modal.component.html
@@ -1,22 +1,23 @@
 <mat-dialog-content>
   <h2>welcome 🤗</h2>
-  <p><strong>film in the gaps</strong> is a daily puzzle asking only one thing of you: connect the first film to the last.</p>
+  <p><strong>film in the gaps</strong> is your daily chance to link two films in as few steps as possible.</p>
+  <p>build your solution by connecting film to cast & crew, to their filmographies, and so on.</p>
   <p>each puzzle has a solution of six or less steps but "be our guest" and take as long as you want!</p>
-  <p>build your solution by connecting film, to cast&crew, to their filmographies, und so weiter.</p>
 
   <p class="example-solution">
     <img class="example-solution" src="assets/examplesolution.png">
-    e.g. <strong>Nude Tuesday</strong> stars <strong>Damon Herriman</strong> who played Charles Manson in
-    <strong>Once Upon a Time in Hollywood...</strong> which was directed by <strong>Quentin Tarantino</strong>
-    who wrote <strong>True Romance</strong> which was directed by <strong>Tony Scott</strong> who also directed
-    <strong>Top Gun</strong>!
+    e.g. <strong>Spider-Man: Far From Home</strong> stars <strong>Jake Gyllenhaal</strong> who played Jack Twist
+    <strong>Brokeback Mountain</strong> which was directed by <strong>Ang Lee</strong> 
+    who also directed <strong>Hulk</strong> which starred <strong>Jennifer Connelly</strong> who appeared in 
+    <strong>Spider-Man: Homecoming</strong>!
   </p>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
+<mat-dialog-actions>
+  <button mat-stroked-button aria-label="understood instructions" [mat-dialog-close]="true" cdkFocusInitial>
+    i'm ready to film in the gaps
+  </button>
+
   <button mat-stroked-button aria-label="our data" [mat-dialog-close]="true" routerLink="/our-data">
     about our data
-  </button>
-  <button mat-stroked-button aria-label="understood instructions" [mat-dialog-close]="true" cdkFocusInitial (click)="seenInstructions()">
-    i'm ready to film in the gaps
   </button>
 </mat-dialog-actions>
